--- a/package.json
+++ b/package.json
@@ -16,15 +16,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "resolutions": {
-    "styled-components": "^5"
   },
   "browserslist": {
     "production": [
@@ -40,12 +35,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
-    "@storybook/addon-actions": "^6.0.12",
-    "@storybook/addon-essentials": "^6.0.12",
-    "@storybook/addon-links": "^6.0.12",
-    "@storybook/node-logger": "^6.0.12",
-    "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.12",
     "babel-loader": "^8.1.0",
     "react-is": "^16.13.1"
   }
